# pyWinAppDriver

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
src/pyWinAppDriver/: constant.py  dependencies.py  main.py  mouse.py  property_identifiers.py  session_manager.py  util.py  utils.py  var.py
src/pyWinAppDriver/endpoint/session/: __init__.py
src/pyWinAppDriver/endpoint/session/session_id/: source.py
src/pyWinAppDriver/root/: __init__.py
src/pyWinAppDriver/root/session/: __init__.py
src/pyWinAppDriver/root/session/session_id/: __init__.py
src/pyWinAppDriver/root/session/session_id/window/: __init__.py
src/pyWinAppDriver/routers/: appium_app.py  element.py  elementId.py  id.py  session.py  sessionId.py  session_id.py  window.py  windowHandle.py  window_handle.py
src/pyWinAppDriver/session/: __init__.py
src/pyWinAppDriver/session/session_id/: source.py
src/pyWinAppDriver/session/session_id/element/: __init__.py
src/pyWinAppDriver/session/session_id/touch/: __init__.py
tests/: test_api.py  test_calculator.py  test_page_source.py
