[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyWinAppDriver"
version = "0.0.1"
authors = [
  { name="osmtk", email="shungiku@x06.org" },
]
description = "WinAppDriver server in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pywinauto",
    "lxml",
    "pillow",
]
[project.optional-dependencies]
dev = [
    "tox",
    "pytest",
    "Appium-Python-Client<2.0",
    "urllib3<2.0",
]

[project.urls]
"Homepage" = "https://github.com/osmtk/pyWinAppDriver"
"Bug Tracker" = "https://github.com/osmtk/pyWinAppDriver/issues"

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "PL"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
disallow_untyped_defs = false # temp
ignore_missing_imports = true
check_untyped_defs = true
